--- a/src/components/Welcome.css
+++ b/src/components/Welcome.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     overflow-y: scroll;
+    overflow-x: hidden;
     height: 40em;
     width: 65em;
     text-align: center;
@@ -203,4 +204,16 @@ a:hover {
 
 .nineth>p {
     font-size: 2em;
+}
+
+@media screen and (max-width: 1030px) {
+    .Slide {
+        width: 98vw;
+    }
+
+    @keyframes follow {
+        0% {transform: translateX(0em)}
+        60% {transform: translateX(0em)}
+        100% {transform: translateX(12em)}
+    }
 }
